# tarpc-fory

./: Cargo.toml  LICENSE-MIT  README.md
docs/: 2026-04-29-streaming-rpc-design.md
docs/plans/: 2026-04-29-phase-s0-eliminate-fork.md
src/: envelope.rs  lib.rs  transport.rs  zerocopy.rs
tests/: all_error_kinds.rs  cancel.rs  codec_parity.rs  coverage.rs  custom_types.rs  envelope.rs  errors.rs  large_payload.rs  lifecycle.rs  multi_client.rs  multiplex.rs  service.rs  tls.rs  trace_context.rs  transport.rs  transport_fork.rs  zerocopy_codec.rs  zerocopy_tls.rs
