[package]
name = "tarpc-fory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Apache Fory transport for tarpc"
repository = "https://github.com/justinholmes/tarpc-fory"
readme = "README.md"
keywords = ["tarpc", "fory", "rpc", "serialization"]
categories = ["network-programming"]

[features]
default = ["tcp"]
tcp = ["tarpc/tcp", "tokio/net"]
tls = ["tcp", "dep:tokio-rustls"]

[dependencies]
# Upstream tarpc — no fork!
tarpc = { version = "0.37", features = ["serde-transport", "serde1"] }
tarpc-fory-macros = "0.1.1"
tokio-serde-fory = "0.1"

# Fory serialization
fory = "0.17"
fory-core = "0.17"

# Async runtime + IO
tokio = { version = "1", features = ["sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = "0.9"

# TLS (optional)
tokio-rustls = { version = "0.26", optional = true }

# Framing + streams
futures = "0.3"
pin-project = "1"
bytes = "1"

# serde (needed for Transport bounds)
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rcgen = "0.13"

# [[bench]]
# name = "fory_codec_compare"
# harness = false
# Uncomment when benches/fory_codec_compare.rs is created (Task 9).
